# rusty-tracker

./: .gitignore  README.md  fp-info-cache  fp-lib-table  nrf9160dk.kicad_prl  nrf9160dk.kicad_pro  panelize.sh  rusty-tracker.kicad_dru  rusty-tracker.kicad_pcb  rusty-tracker.kicad_prl  rusty-tracker.kicad_pro  rusty-tracker.kicad_sch  rusty-tracker.kicad_sym  sym-lib-table
.github/workflows/: outputs.yml
firmware/: Cargo.toml  README.md  modem-log  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/.helix/: languages.toml
firmware/.nvim/: rust_analyzer.json
firmware/src/: bsp.rs  lib.rs  r4_modem.rs  sara_r4xx.rs  ssq.rs  tasks.rs
firmware/src/sara_r4xx/: at.rs  tests.rs
rusty-tracker.pretty/: 2.4ghz-inverted-f.kicad_mod  ANT_0402.kicad_mod  gps-inverted-f.kicad_mod
solt-calibrator/: fp-lib-table  solt-calibrator.kicad_pcb  solt-calibrator.kicad_prl  solt-calibrator.kicad_pro  solt-calibrator.kicad_sch  sym-lib-table
