[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
name = "rusty-tracker"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
#defmt-brtt = { git = "https://github.com/datdenkikniet/defmt-brtt.git" }

rtic = { version = "2.0.0-alpha.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.0.0-alpha.2", features = ["cortex-m-systick", "nrf52840", "embedded-hal-async"] }
rtic-sync = "1.0.0-alpha.0"
rtic-common = "1.0.0-alpha.0"

at-commands = { version = "0.5.3", features = ["defmt"] }
heapless = { version = "0.7.16", features = ["defmt-impl"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }

embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "unstable-traits"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "msos-descriptor"] }

no-std-net = "0.6.0"
atomic-polyfill = "1.0.2"
critical-section = "1.1"

embedded-hal-async = "0.2.0-alpha.1"
embedded-hal = "1.0.0-alpha.10"

[dev-dependencies]
tokio = { version = "1.27", features = ["rt", "macros", "time", "sync"] }
critical-section = { version = "1.1", features = ["std"] }

[[bin]]
name = "app"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
